Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/StagingJobApplication__c.object-meta.xml
<CustomObject>
    <label>Third Party Job Application</label>
    <nameField>
        <displayFormat>VMS-A-{YYYY}{MM}-{0}</displayFormat>
        <label>Staging Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>