Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Animal_Rights_Check__c.field-meta.xml
<CustomField>
    <fullName>Animal_Rights_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal Rights Check</label>
    <type>Checkbox</type>
</CustomField>