Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Certificate_of_Fitness__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Fitness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Fitness</label>
    <type>Checkbox</type>
</CustomField>