Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Competency_Based_Interview__c.field-meta.xml
<CustomField>
    <fullName>Competency_Based_Interview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competency Based Interview</label>
    <type>Checkbox</type>
</CustomField>