Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Conflict_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conflict of Interest</label>
    <type>Checkbox</type>
</CustomField>