Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Criminal_Records_Check__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Records_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal Records Check</label>
    <type>Checkbox</type>
</CustomField>