Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Employment_History_Check__c.field-meta.xml
<CustomField>
    <fullName>Employment_History_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment History Check</label>
    <type>Checkbox</type>
</CustomField>