Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID such as the application ID in Evolution (Candidate Role ID)</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>