Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Job_Order_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>sirenum__JobOrder__c</referenceTo>
    <relationshipLabel>Third Party Job Applications</relationshipLabel>
    <relationshipName>Third_Party_Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>