Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Lemington_Spa_ToE_Handbook__c.field-meta.xml
<CustomField>
    <fullName>Lemington_Spa_ToE_Handbook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leamington Spa ToE/Handbook</label>
    <type>Checkbox</type>
</CustomField>