Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Lunar_Training__c.field-meta.xml
<CustomField>
    <fullName>Lunar_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lunar Training</label>
    <type>Checkbox</type>
</CustomField>