Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Media_Check__c.field-meta.xml
<CustomField>
    <fullName>Media_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Check</label>
    <type>Checkbox</type>
</CustomField>