Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Oversea_Police_Check_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Oversea_Police_Check_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oversea Police Check Not Required</label>
    <type>Checkbox</type>
</CustomField>