Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>Payroll_ID__c</fullName>
    <formula>stgPayProfile__r.IP_PayrollID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll ID</label>
    <type>Text</type>
</CustomField>