Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Placement_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Placement_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement Checklist</label>
    <type>Checkbox</type>
</CustomField>