Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/PORTW_Type__c.field-meta.xml
<CustomField>
    <fullName>PORTW_Type__c</fullName>
    <label>PORTW Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>British Passport</fullName>
            </value>
            <value>
                <fullName>British Birth / Adoption Certificate</fullName>
            </value>
            <value>
                <fullName>British Certificate of Naturalisation</fullName>
            </value>
            <value>
                <fullName>Irish Passport</fullName>
            </value>
            <value>
                <fullName>Irish Passport Card</fullName>
            </value>
            <value>
                <fullName>Irish Birth / Adoption Certificate</fullName>
            </value>
            <value>
                <fullName>Biometric Residence Permit / Card - No Time Limit</fullName>
            </value>
            <value>
                <fullName>Biometric Residence Permit / Card - Time Limit</fullName>
            </value>
            <value>
                <fullName>Certificate of Application / Application Registration Card plus ECS Check - Time Limited</fullName>
            </value>
            <value>
                <fullName>Crown Dependency Letter plus ECS Check - No Time Limit</fullName>
            </value>
            <value>
                <fullName>Crown Dependency Letter plus ECS Check - Time Limit</fullName>
            </value>
            <value>
                <fullName>ECS Check - Time Limit</fullName>
            </value>
            <value>
                <fullName>EUSS Family - No Time Limited</fullName>
            </value>
            <value>
                <fullName>EUSS Family - Time Limited</fullName>
            </value>
            <value>
                <fullName>Frontier Worker Permit - Time Limited</fullName>
            </value>
            <value>
                <fullName>Immigration Status Document - No Time Limit</fullName>
            </value>
            <value>
                <fullName>Immigration Status Document - Time Limit</fullName>
            </value>
            <value>
                <fullName>Online Right To Work Check - No Time Limit</fullName>
            </value>
            <value>
                <fullName>Online Right To Work Check - Time Limit</fullName>
            </value>
            <value>
                <fullName>Passport with Visa - No Time Limit</fullName>
            </value>
            <value>
                <fullName>Passport with Visa - Time Limit</fullName>
            </value>
            <value>
                <fullName>(A1) UK / EEA Passport</fullName>
                <isActive>false</isActive>
                <label>(A1) UK / EEA Passport</label>
            </value>
            <value>
                <fullName>(A3) Passport or National identity card, issued by EEA Agreement State</fullName>
                <isActive>false</isActive>
                <label>(A3) Passport or National identity card, issued by EEA Agreement State</label>
            </value>
            <value>
                <fullName>(A4) UK residence permit</fullName>
                <isActive>false</isActive>
                <label>(A4) UK residence permit</label>
            </value>
            <value>
                <fullName>(A6) Passport or other Travel doc. showing indefinite leave to enter/ remain in UK</fullName>
                <isActive>false</isActive>
                <label>(A6) Passport or other Travel doc. showing indefinite leave to enter/ remain in UK</label>
            </value>
            <value>
                <fullName>(A8) Registration card showing entitlement to take employment in UK</fullName>
                <isActive>false</isActive>
                <label>(A8) Registration card showing entitlement to take employment in UK</label>
            </value>
            <value>
                <fullName>NI NO. + (B) birth certificate issues in UK</fullName>
                <isActive>false</isActive>
                <label>NI NO. + (B) birth certificate issues in UK</label>
            </value>
            <value>
                <fullName>NI NO. + (C) birth certificate issues in the Channel Islands, Isle of Man, Ireland</fullName>
                <isActive>false</isActive>
                <label>NI NO. + (C) birth certificate issues in the Channel Islands, Isle of Man, Ireland</label>
            </value>
            <value>
                <fullName>NI NO. + (D) certificate of registration or naturalization as a British Citizen</fullName>
                <isActive>false</isActive>
                <label>NI NO. + (D) certificate of registration or naturalization as a British Citizen</label>
            </value>
            <value>
                <fullName>NI NO. + (E) letter issued by Home Office granting Indefinite Leave to enter or Remain in the UK</fullName>
                <isActive>false</isActive>
                <label>NI NO. + (E) letter issued by Home Office granting Indefinite Leave to enter or Remain in the UK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>