Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Professional_Registration_Check_Not_Req__c.field-meta.xml
<CustomField>
    <fullName>Professional_Registration_Check_Not_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional Registration Check Not Req</label>
    <type>Checkbox</type>
</CustomField>