Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Proof_of_ID__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of ID</label>
    <type>Checkbox</type>
</CustomField>