Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualification</label>
    <type>Checkbox</type>
</CustomField>