Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Qualification_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualification Not Required</label>
    <type>Checkbox</type>
</CustomField>