Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Risk_Assessment_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Assessment Not Required</label>
    <type>Checkbox</type>
</CustomField>