Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/StagingJobOrder__c.field-meta.xml
<CustomField>
    <fullName>StagingJobOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staging Job Order</label>
    <referenceTo>StagingJobOrder__c</referenceTo>
    <relationshipLabel>Third Party Job Applications</relationshipLabel>
    <relationshipName>Third_Party_Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>