Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>stgApplicationStatus__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submission Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>