Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgAtsCandidateIntegrationRef__c.field-meta.xml
<CustomField>
    <fullName>stgAtsCandidateIntegrationRef__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Candidate</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>2nd Tier Candidate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Third Party Job Applications</relationshipLabel>
    <relationshipName>Staging_Job_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>