Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgAtsShiftIntegrationRef__c.field-meta.xml
<CustomField>
    <fullName>stgAtsShiftIntegrationRef__c</fullName>
    <label>stgAtsShiftIntegrationRef</label>
    <length>32</length>
    <type>Text</type>
</CustomField>