Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgFrontOfficeIntegrationSystem__c.field-meta.xml
<CustomField>
    <fullName>stgFrontOfficeIntegrationSystem__c</fullName>
    <description>stgFrontOfficeIntegrationSystem in Integration Layer</description>
    <label>Brand</label>
    <length>32</length>
    <type>Text</type>
</CustomField>