Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgPayProfile__c.field-meta.xml
<CustomField>
    <fullName>stgPayProfile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pay Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.stgAtsCandidateIntegrationRef__c</field>
            <operation>equals</operation>
            <valueField>IP_PayProfile__c.IP_Candidate__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>IP_PayProfile__c</referenceTo>
    <relationshipLabel>Third Party Job Applications</relationshipLabel>
    <relationshipName>Staging_Job_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>