Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>stgRejectionReason__c</fullName>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>