Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgSPlacementId__c.field-meta.xml
<CustomField>
    <fullName>stgSPlacementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>S-Placement</label>
    <referenceTo>sirenum__Placement__c</referenceTo>
    <relationshipName>Staging_Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>