Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgSPlacementSubmitted__c.field-meta.xml
<CustomField>
    <fullName>stgSPlacementSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S-Placement Submitted</label>
    <type>Checkbox</type>
</CustomField>