Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgSubmissionDatetime__c.field-meta.xml
<CustomField>
    <fullName>stgSubmissionDatetime__c</fullName>
    <label>Submission Date Time</label>
    <type>DateTime</type>
</CustomField>