Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgSubmissionError__c.field-meta.xml
<CustomField>
    <fullName>stgSubmissionError__c</fullName>
    <description>API call error log</description>
    <label>stgSubmissionError</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>