Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgSubmissionStatus__c.field-meta.xml
<CustomField>
    <fullName>stgSubmissionStatus__c</fullName>
    <description>API submission status</description>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>S-Placement Submitted</fullName>
            </value>
            <value>
                <fullName>Application Submission Failed</fullName>
            </value>
            <value>
                <fullName>S-Placement Submission Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>