Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgSubmittedJSON__c.field-meta.xml
<CustomField>
    <fullName>stgSubmittedJSON__c</fullName>
    <label>stgSubmittedJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>