Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgVmsClientId__c.field-meta.xml
<CustomField>
    <fullName>stgVmsClientId__c</fullName>
    <label>stgVmsClientId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>