Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgVmsRoleId__c.field-meta.xml
<CustomField>
    <fullName>stgVmsRoleId__c</fullName>
    <label>stgVmsRoleId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>