Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/stgVmsShiftId__c.field-meta.xml
<CustomField>
    <fullName>stgVmsShiftId__c</fullName>
    <label>stgVmsShiftId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>