Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <label>Visa Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>