Frankbelford/uatv1ba/force-app/main/default/objects/StagingJobApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job_Order_Lookup__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>stgAtsCandidateIntegrationRef__c</columns>
    <columns>stgSPlacementId__c</columns>
    <columns>stgApplicationStatus__c</columns>
    <columns>stgSubmissionStatus__c</columns>
    <columns>stgSubmissionDatetime__c</columns>
    <columns>stgSPlacementSubmitted__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>